Prevent horizontal overflow in mobile navigation.

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -26,6 +26,10 @@ body {
 	line-height: $line-height-base;
 }
 
+[data-widget="library"] {
+	overflow: hidden; // Prevent any overflow
+}
+
 [data-reactroot] {
 	display: flex;
 	flex-direction: column;
