--- a/src/scss/components/_collection-tree.scss
+++ b/src/scss/components/_collection-tree.scss
@@ -3,6 +3,11 @@
 // --------------------------------------------------
 
 .collection-tree {
+	@include touch-or-bp-down(sm) {
+		height: 100%;
+		overflow: auto; // Do not set on positioned elements (horizontal overflow)
+	}
+
 	@include mouse-and-bp-up(md) {
 		padding: $collection-tree-padding-vertical 0;
 	}
@@ -60,9 +65,13 @@
 				top: 0;
 				width: 100%;
 				height: 100%;
-				overflow: auto;
 				background: $sidebar-bg;
 				transform: translate3d(100%, 0, 0);
+
+				.nav {
+					height: 100%;
+					overflow: auto; // Do not set on positioned elements (horizontal overflow)
+				}
 			}
 
 			@include bp-only(sm) {
